Small fixes to jira integration